--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>PHP Badwords</title>
   </head>
-  <body></body>
+  <body>
+    <form action="index.php">
+      <textarea
+        name="text"
+        id=""
+        cols="40"
+        rows="5"
+        placeholder="Enter a text"
+      ></textarea>
+      <button type="submit">Enter</button>
+      <button type="reset">Reset</button>
+    </form>
+  </body>
 </html>
